Acabar endpoint añadir grupo