@@ -3,13 +3,14 @@ package com.chatterbox.api_rest.service;
 import com.chatterbox.api_rest.dto.grupo.ChatDeUnGrupoDto;
 import com.chatterbox.api_rest.dto.grupo.GrupoDto;
 import com.chatterbox.api_rest.repository.GruposRepository;
+import com.chatterbox.api_rest.util.ValidacionUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.dao.DuplicateKeyException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -20,10 +21,23 @@ public class GruposService {
     private final GruposRepository gruposRepository;
 
     public ResponseEntity<?> createGrupo(GrupoDto nuevoGrupo) {
-        // ¿Usar GrupoDto está bien o me creo otro DTO para recibir los datos del nuevo grupo?
-        List<String> atributos = Arrays.asList(nuevoGrupo.getNombre_grupo());
+        List<String> camposObligatorios = List.of(String.valueOf(nuevoGrupo.getId_usuario_creador()), nuevoGrupo.getNombre_grupo());
+        if (!ValidacionUtils.camposValidos(camposObligatorios)) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body("Credenciales inválidas");
+        }
 
-        return null;
+        try {
+            Long id = gruposRepository.insertGrupo(nuevoGrupo);
+            nuevoGrupo.setId_grupo(id);
+
+            return ResponseEntity.status(HttpStatus.CREATED)
+                    .body(nuevoGrupo);
+        } catch (DuplicateKeyException e) {
+            log.error("Error al agregar grupo ", e);
+            return ResponseEntity.status(HttpStatus.CONFLICT)
+                    .body("Grupo ya existente para ese usuario");
+        }
     }
 
     public ResponseEntity<?> getChatsDeUnGrupo(Long idGrupo) {
